force-app/main/default/objects/Coupon__c/fields/Apply_For__c.field-meta.xml
<CustomField>
    <fullName>Apply_For__c</fullName>
    <label>Apply For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Payments</fullName>
            </value>
            <value>
                <fullName>Only First Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>