force-app/main/default/objects/Coupon__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Enrollments</fullName>
            </value>
            <value>
                <fullName>Enrollment Renewal</fullName>
            </value>
            <value>
                <fullName>Enrollment Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>