force-app/main/default/objects/Coupon__c/fields/Redemption_Limit_All_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Limit_All_Buyers__c</fullName>
    <label>Redemption Limit All Buyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>