force-app/main/default/objects/Coupon__c/fields/Redemption_Limit_Per_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Limit_Per_Buyer__c</fullName>
    <inlineHelpText>Number of times this coupon can be used per enrollment.</inlineHelpText>
    <label>Redemption Limit Per Buyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>