force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coupon_Code__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Member__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>